--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.2.0",
+    "cookie": "^1.0.2",
     "express": "^5.1.0",
+    "express-handlebars": "^8.0.3",
     "handlebar": "^1.0.0",
     "socket.io": "^4.8.1"
   }
